--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "googlethis": "^1.7.1",
+    "hcaptcha": "^0.1.1",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "openai": "^3.2.1",
