--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@zeldafan0225/stable_horde": "^2.4.1",
     "canvas": "^2.11.0",
     "chatgpt-official": "^1.1.7",
+    "cld": "^2.9.0",
     "cors": "^2.8.5",
     "delay": "^5.0.0",
     "dotenv": "^16.0.3",
@@ -24,6 +25,7 @@
     "openai": "^3.2.1",
     "replicate-api": "^0.4.4",
     "sharp": "^0.31.3",
+    "topgg-votes": "^2.1.0",
     "wikipedia": "^2.0.0"
   },
   "description": "``` npm create astro@latest -- --template basics ```",
