--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "openai": "^3.2.1",
+    "redis": "^4.6.5",
     "replicate-api": "^0.4.4",
     "sharp": "^0.31.3",
     "topgg-votes": "^2.1.0",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
+    "@types/redis": "^4.0.11",
     "typescript": "^4.9.5"
   }
 }
