--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,4 +35,6 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           script: |
             cd /home/loick/github/turing-ai-api
+            npm i
+            npm run build
             pm2 reload 0
