--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "turing-ai-api",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "build": "tsc",
     "start": "tsc && node .",
@@ -9,6 +9,7 @@
     "git": "git fetch && git pull"
   },
   "dependencies": {
+    "@huggingface/inference": "^2.0.0",
     "@supabase/supabase-js": "^2.10.0",
     "@zeldafan0225/stable_horde": "^2.4.1",
     "canvas": "^2.11.0",
@@ -23,10 +24,12 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "openai": "^3.2.1",
+    "openai-ext": "^1.2.4",
     "redis": "^4.6.5",
     "replicate-api": "^0.4.4",
     "sharp": "^0.31.3",
     "topgg-votes": "^2.1.0",
+    "uuid": "^9.0.0",
     "wikipedia": "^2.0.0"
   },
   "description": "``` npm create astro@latest -- --template basics ```",
@@ -45,6 +48,8 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
     "@types/redis": "^4.0.11",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2",
     "typescript": "^4.9.5"
   }
 }
