--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 SUPABASE_URL=Supabase url
 SUPABASE_KEY=Supabase key
 SUPABASE_ANON=Supabase anon key
-PORT=3231
+PORT=port
 SECRET_KEY=Secret key for jwt
 REPLICATE_API_KEY=Replicate key
 OPENAI_API_KEY=open ai key
