--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hcaptcha": "^0.1.1",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "langchain": "^0.0.64",
     "openai": "^3.2.1",
     "openai-ext": "^1.2.4",
     "redis": "^4.6.5",
