--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "delay": "^5.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "get-urls": "^11.0.0",
     "googlethis": "^1.7.1",
     "hcaptcha": "^0.1.1",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "langchain": "^0.0.64",
+    "mathjs": "^11.8.0",
     "openai": "^3.2.1",
     "openai-ext": "^1.2.4",
     "redis": "^4.6.5",
