feat: charts, alan plugins, palm2, chatgpt plugins, firebase

--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "@supabase/supabase-js": "^2.10.0",
     "@zeldafan0225/stable_horde": "^2.4.1",
     "canvas": "^2.11.0",
+    "chartjs-to-image": "^1.1.0",
     "chatgpt-official": "^1.1.7",
     "cld": "^2.9.0",
     "cors": "^2.8.5",
     "delay": "^5.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.22.0",
     "get-urls": "^11.0.0",
     "googlethis": "^1.7.1",
     "hcaptcha": "^0.1.1",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "langchain": "^0.0.64",
+    "langchain": "^0.0.75",
     "mathjs": "^11.8.0",
     "openai": "^3.2.1",
     "openai-ext": "^1.2.4",
@@ -34,7 +36,7 @@
     "sharp": "^0.31.3",
     "topgg-votes": "^2.1.0",
     "uuid": "^9.0.0",
-    "wikipedia": "^2.0.0"
+    "wikipedia": "^1.2.0"
   },
   "description": "``` npm create astro@latest -- --template basics ```",
   "main": "dist/index.js",
