--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sellix/node-sdk": "^1.0.9",
     "@supabase/supabase-js": "^2.10.0",
     "@zeldafan0225/stable_horde": "^2.4.1",
+    "bard-ai": "^1.0.0",
     "canvas": "^2.11.0",
     "chartjs-to-image": "^1.1.0",
     "chatgpt-official": "^1.1.7",
@@ -23,6 +24,7 @@
     "express": "^4.18.2",
     "firebase": "^9.22.0",
     "get-urls": "^11.0.0",
+    "googlebard": "^1.0.5",
     "googlethis": "^1.7.1",
     "hcaptcha": "^0.1.1",
     "helmet": "^6.0.1",
