--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cld": "^2.9.0",
     "cors": "^2.8.5",
     "delay": "^5.0.0",
+    "discord.js-selfbot-v13": "^2.14.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase": "^9.22.0",
