--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@huggingface/inference": "^2.0.0",
     "@sellix/node-sdk": "^1.0.9",
     "@supabase/supabase-js": "^2.10.0",
+    "@waylaidwanderer/chatgpt-api": "^1.36.2",
     "@zeldafan0225/stable_horde": "^2.4.1",
     "bard-ai": "^1.0.0",
     "canvas": "^2.11.0",
