--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "openai-ext": "^1.2.4",
     "poe-node-api": "^0.0.5",
     "puppeteer": "^19.11.1",
+    "rabbitmq-client": "^4.0.0",
     "redis": "^4.6.5",
     "replicate-api": "^0.4.4",
     "sharp": "^0.31.3",
