--- a/.github/workflows/deployNew.yml
+++ b/.github/workflows/deployNew.yml
@@ -26,7 +26,7 @@ jobs:
           script: |
             cd /home/loick/github/turing-api-new
             npm run git
-            npm i --force
+            npm i 
             npm run build
             nvm use 18
             pm2 reload TuringAPINew
