--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chartjs-to-image": "^1.2.1",
     "cors": "^2.8.5",
     "delay": "^6.0.0",
+    "discord.js-selfbot-v13": "^2.14.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "google-tts-api": "^2.0.2",
