--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "discord.js-selfbot-v13": "^2.14.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^8.9.0",
     "google-tts-api": "^2.0.2",
     "googlethis": "^1.7.1",
     "hcaptcha": "^0.1.1",
