--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/TuringAI-Team/turing-ai-api#readme",
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.7",
+    "@google-ai/generativelanguage": "^0.2.0",
     "@huggingface/inference": "^2.5.2",
     "@octokit/rest": "^19.0.13",
     "@sellix/node-sdk": "^1.0.9",
@@ -35,6 +36,7 @@
     "discord.js-selfbot-v13": "^2.14.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^8.9.0",
     "google-tts-api": "^2.0.2",
     "googlethis": "^1.7.1",
     "hcaptcha": "^0.1.1",
