--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/TuringAI-Team/turing-ai-api#readme",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.5.0",
     "@dqbd/tiktoken": "^1.0.7",
     "@google-ai/generativelanguage": "^0.2.0",
     "@huggingface/inference": "^2.5.2",
