--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@anthropic-ai/sdk": "^0.5.0",
     "@dqbd/tiktoken": "^1.0.7",
     "@google-ai/generativelanguage": "^0.2.0",
+    "@google-cloud/aiplatform": "^2.16.0",
     "@huggingface/inference": "^2.5.2",
     "@octokit/rest": "^19.0.13",
     "@sellix/node-sdk": "^1.0.9",
