--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "discord.js-selfbot-v13": "^2.14.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.1",
     "fluent-ffmpeg": "^2.1.2",
     "google-auth-library": "^8.9.0",
     "google-tts-api": "^2.0.2",
