feat: diagrams &&  fix: topgg

--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "jsonwebtoken": "^9.0.0",
     "lang-detector": "^1.0.6",
     "mathjs": "^11.8.2",
+    "mermaid": "^10.2.4",
     "openai": "^3.3.0",
+    "puppeteer": "^20.8.1",
     "rabbitmq-client": "^4.1.0",
     "redis": "^4.6.7",
     "replicate-api": "^0.4.4",
