fix: auto deploy

--- a/.github/workflows/deployNew.yml
+++ b/.github/workflows/deployNew.yml
@@ -25,6 +25,7 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           script: |
             cd /home/loick/github/turing-api-new
+            sudo su -
             npm run git
             npm i
             rm -r dist
