--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "start": "tsc &&  node dist/index.js",
-    "git": "git fetch && git pull"
+    "git": "git fetch && git pull",
+    "docs": "tsc && node dist/rundocs.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,6 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.5.0",
     "@dqbd/tiktoken": "^1.0.7",
-    "@google-ai/generativelanguage": "^0.2.0",
-    "@google-cloud/aiplatform": "^2.16.0",
     "@huggingface/inference": "^2.5.2",
     "@mermaid-js/mermaid-cli": "^10.3.0",
     "@octokit/rest": "^19.0.13",
@@ -36,7 +35,6 @@
     "chartjs-to-image": "^1.2.1",
     "cors": "^2.8.5",
     "delay": "^6.0.0",
-    "discord.js-selfbot-v13": "^2.14.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
@@ -49,7 +47,6 @@
     "jsonwebtoken": "^9.0.0",
     "lang-detector": "^1.0.6",
     "mathjs": "^11.8.2",
-    "mermaid": "^10.2.4",
     "openai": "^3.3.0",
     "puppeteer": "^19.11.1",
     "rabbitmq-client": "^4.1.0",
