--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "rabbitmq-client": "^4.3.0",
     "redis": "^4.6.8",
     "replicate-api": "^0.4.4",
+    "turing.sh": "^0.0.9",
     "uuid": "^9.0.0",
     "wandbox-api-updated": "^1.0.3",
     "yt-search": "^2.10.4"
