--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.6.2",
     "@dqbd/tiktoken": "^1.0.7",
+    "@google-cloud/vertexai": "^0.1.3",
     "@huggingface/inference": "^2.5.2",
     "@mermaid-js/mermaid-cli": "^10.3.0",
     "@octokit/rest": "^19.0.13",
